--- a/Main/style.css
+++ b/Main/style.css
@@ -335,17 +335,15 @@ body {
 .main__block-2 {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  padding: 0;
 }
 .block-2__content {
-  width: 1360px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
 .content__title {
-  max-width: 530px;
   font-family: Lubalin Graph;
   font-size: 70px;
   font-weight: 5;
@@ -354,6 +352,7 @@ body {
   text-align: left;
 }
 .content__text {
+  padding-left: 20px;
   max-width: 670px;
   display: flex;
   flex-direction: column;
@@ -1246,16 +1245,18 @@ body {
     width: 140px;
     height: 140px;
   }
+  .page__main-block-2 {
+    padding-top: 80px;
+  }
   .main__block-2 {
-    width: 964px;
   }
   .block-2__content {
-    width: 100%;
     flex-direction: column;
     align-items: flex-start;
   }
   .content__text {
     margin-top: 20px;
+    padding: 0;
   }
   .slider__wrapper {
     gap: 10px;
@@ -1366,7 +1367,8 @@ body {
     margin-right: 330px;
   }
 }
-@media (max-width: 375px) {
+
+@media (max-width: 435px) {
   ._container {
     padding: 0 10px;
   }
@@ -1409,8 +1411,10 @@ body {
     color: #2e2e2e;
     margin: 20px 0;
   }
+  .page__main-block-2 {
+    padding: 60px 10px 0 10px;
+  }
   .main__block-2 {
-    width: 355px;
   }
   .content__title {
     font-family: "Lubalin Graph";
@@ -1432,6 +1436,7 @@ body {
     color: #2e2e2e;
     width: auto;
     margin: 0;
+    padding: 0;
   }
   .content__text p {
     margin: 20px 0;
