--- a/Main/style.css
+++ b/Main/style.css
@@ -94,12 +94,12 @@ body {
   overflow: hidden;
 }
 .header {
+  padding: 0 30px;
 }
 ._container {
   max-width: 1360px;
   margin: 0 auto;
   box-sizing: content-box;
-  padding: 0 30px;
 }
 .header__body {
   height: 80px;
@@ -412,13 +412,15 @@ body {
     transform: translate3d(-345px, 0, 0);
   }
 }
+.page__main-block-3 {
+  padding-top: 120px;
+}
 .main__block-3 {
-  width: 1360px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  margin-top: 120px;
+  padding: 0;
 }
 .block-3__title {
   font-family: "Lubalin Graph";
@@ -431,7 +433,6 @@ body {
   color: #2e2e2e;
 }
 .block-3__content {
-  width: 100%;
   height: 745px;
   position: relative;
 }
@@ -534,13 +535,14 @@ body {
   text-transform: uppercase;
   color: #4b61f1;
 }
+.page__block__video {
+  padding-top: 120px;
+}
 .block__video {
-  width: 1360px;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   flex-direction: column;
-  margin: 120px 0;
 }
 .video__title {
   font-family: "Lubalin Graph";
@@ -554,8 +556,7 @@ body {
   margin-bottom: 40px;
 }
 .video {
-  width: 1360px;
-  height: 600px;
+  max-width: 1360px;
   border: 1px solid #000;
   border-radius: 30px;
 }
@@ -1274,7 +1275,6 @@ body {
     }
   }
   .main__block-3 {
-    width: 964px;
   }
   .block-3__title {
     margin: 0;
@@ -1369,8 +1369,10 @@ body {
 }
 
 @media (max-width: 435px) {
-  ._container {
+  .header {
     padding: 0 10px;
+  }
+  ._container {
   }
   .page__main-block-1 {
     padding: 20px 10px 0 10px;
@@ -1415,6 +1417,7 @@ body {
     padding: 60px 10px 0 10px;
   }
   .main__block-2 {
+    padding: 0;
   }
   .content__title {
     font-family: "Lubalin Graph";
@@ -1444,9 +1447,10 @@ body {
   .content__text a {
     margin: 0;
   }
+  .page__main-block-3 {
+    padding-top: 60px;
+  }
   .main__block-3 {
-    width: 355px;
-    margin-top: 60px;
   }
   .block-3__title {
     font-family: "Lubalin Graph";
