--- a/Main/style.css
+++ b/Main/style.css
@@ -738,7 +738,7 @@ body {
   background-color: #ffffff;
 }
 .slider__profile {
-  width: 670px;
+  max-width: 670px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1554,7 +1554,7 @@ body {
     display: none;
   }
   .slider__cards {
-    width: 355px;
+    width: 100%;
     margin: 0 auto;
   }
   .slider__card {
@@ -1569,7 +1569,6 @@ body {
     gap: 5px;
   }
   .slider__profile {
-    width: 355px;
   }
   .card__about {
     width: 100%;
