--- a/Main/style.css
+++ b/Main/style.css
@@ -814,9 +814,12 @@ body {
   margin: 0;
 }
 .social__media {
-  width: 805px;
+  max-width: 805px;
   height: 185.5px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 11px;
   margin-left: 255px;
 }
 .facebook {
@@ -828,9 +831,6 @@ body {
   align-items: center;
   justify-content: center;
   transform: rotate(-15deg);
-  position: absolute;
-  top: 25px;
-  left: 30px;
 }
 .facebook,
 .instagram,
@@ -859,9 +859,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  left: 270px;
-  bottom: 0;
 }
 .instagram svg {
   width: 39px;
@@ -888,9 +885,6 @@ body {
   align-items: center;
   justify-content: center;
   transform: rotate(15deg);
-  position: absolute;
-  left: 425px;
-  top: 25px;
 }
 .telegram:hover {
   background: rgba(35, 154, 214, 1);
@@ -911,9 +905,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
-  right: 0;
 }
 .linkedin svg {
   width: 37.5px;
@@ -1333,7 +1324,6 @@ body {
   .slider__cards {
   }
   .block__social {
-    width: 964px;
     margin-top: 0;
   }
   .social__media {
@@ -1559,14 +1549,15 @@ body {
     display: none;
   }
   .slider__cards {
-    max-width: 355px;
+    max-width: 100vw;
     margin: 0 auto;
   }
   .slider__card {
+    max-width: 100%;
     margin: 0 auto;
   }
   .card__img {
-    width: 315px;
+    max-width: 100%;
     height: 313px;
   }
   .card__info {
