--- a/Main/style.css
+++ b/Main/style.css
@@ -1389,7 +1389,24 @@ body {
     margin-right: 330px;
   }
 }
-
+@media (max-width: 760px) {
+  .slider__cards {
+    max-width: 100vw;
+    margin: 0 auto;
+  }
+  .slider__card {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .card__img {
+    max-width: 100%;
+    height: 313px;
+  }
+  .card__info {
+    width: auto;
+    gap: 5px;
+  }
+}
 @media (max-width: 435px) {
   .header {
     padding: 0 10px;
@@ -1570,22 +1587,7 @@ body {
   .slider__buttons {
     display: none;
   }
-  .slider__cards {
-    max-width: 100vw;
-    margin: 0 auto;
-  }
-  .slider__card {
-    max-width: 100%;
-    margin: 0 auto;
-  }
-  .card__img {
-    max-width: 100%;
-    height: 313px;
-  }
-  .card__info {
-    width: auto;
-    gap: 5px;
-  }
+
   .slider__profile {
   }
   .card__about {
