--- a/Main/style.css
+++ b/Main/style.css
@@ -925,14 +925,15 @@ body {
 .linkedin:hover svg {
   fill: #fffef7;
 }
+.page__block-volunteers {
+  padding-top: 120px;
+}
 .block__volunteers {
-  width: 1360px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 40px;
   align-items: flex-start;
-  margin-bottom: 120px;
+  gap: 40px;
 }
 .volunteers__title {
   font-family: "Lubalin Graph";
@@ -945,7 +946,8 @@ body {
   color: #2e2e2e;
 }
 .volunteers__but {
-  width: 1360px;
+  max-width: 100%;
+  width: 100%;
   height: 160px;
   background: rgba(255, 238, 88, 1);
   display: flex;
@@ -1345,17 +1347,19 @@ body {
   }
   .slider__cards {
   }
+  .page__block-social {
+    padding-top: 80px;
+  }
   .block__social {
-    margin-top: 0;
   }
   .social__media {
-    margin-left: 80px;
+  }
+  .page__block-volunteers {
+    padding-top: 175px;
   }
   .block__volunteers {
-    width: 964px;
   }
   .volunteers__but {
-    width: 964px;
   }
   .footer__body {
     max-width: 1024px;
@@ -1389,6 +1393,34 @@ body {
     margin-right: 330px;
   }
 }
+@media (max-width: 660px) {
+  .social__media {
+    max-width: 355px;
+    height: 382px;
+    width: 100%;
+    gap: 20px;
+    position: relative;
+  }
+  .facebook {
+    position: absolute;
+    left: 0;
+  }
+  .instagram {
+    position: absolute;
+    right: 0;
+    top: 20%;
+  }
+  .telegram {
+    position: absolute;
+    left: 0;
+    top: 43%;
+  }
+  .linkedin {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+}
 @media (max-width: 710px) {
   .slider__cards {
     max-width: 100vw;
@@ -1405,6 +1437,12 @@ body {
   .card__info {
     width: auto;
     gap: 5px;
+  }
+  .slider__profile {
+    max-width: 100%;
+  }
+  .card__about {
+    max-width: 100%;
   }
 }
 @media (max-width: 435px) {
@@ -1582,16 +1620,12 @@ body {
     letter-spacing: -0.05em;
     color: #2e2e2e;
   }
-  .project__slider {
-  }
   .slider__buttons {
     display: none;
   }
 
-  .slider__profile {
-  }
   .card__about {
-    width: 100%;
+    max-width: 100%;
     align-items: flex-start;
   }
   .card__about svg {
@@ -1606,10 +1640,10 @@ body {
     letter-spacing: -0.03em;
     color: #2e2e2e;
   }
+  .page__block-social {
+    padding: 60px 10px 0 10px;
+  }
   .block__social {
-    width: 355px;
-    gap: 0;
-    margin-bottom: 60px;
   }
   .social__title {
     font-family: "Lubalin Graph";
@@ -1622,30 +1656,17 @@ body {
     color: #2e2e2e;
   }
   .social__media {
-    margin: 0;
-    height: 432px;
-    width: 100%;
   }
   .facebook {
-    left: 0;
-    top: 50px;
   }
   .telegram {
-    left: 0;
-    top: 212px;
   }
   .instagram {
-    left: auto;
-    right: 0;
-    top: 130px;
   }
   .linkedin {
-    right: 0;
   }
   .block__volunteers {
-    width: 355px;
     gap: 20px;
-    margin-bottom: 60px;
   }
   .volunteers__title {
     font-family: "Lubalin Graph";
@@ -1658,7 +1679,6 @@ body {
     color: #2e2e2e;
   }
   .volunteers__but {
-    width: 100%;
     font-family: "Lubalin Graph";
     font-style: normal;
     font-weight: 5;
