--- a/Main/style.css
+++ b/Main/style.css
@@ -973,16 +973,9 @@ body {
   transform: scale(0.99);
 }
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #4b61f1;
-  max-width: 100%;
-  margin: 0 auto;
-  overflow-x: hidden;
 }
 .footer__body {
-  max-width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1677,6 +1670,9 @@ body {
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #2e2e2e;
+  }
+  .page__block-volunteers {
+    padding: 60px 10px 0 10px;
   }
   .volunteers__but {
     font-family: "Lubalin Graph";
