--- a/Main/style.css
+++ b/Main/style.css
@@ -981,13 +981,13 @@ body {
 .footer__top {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 1163px;
+  width: 100%;
 }
 .footer__logo {
 }
 .footer__top .language-dropdown {
-  margin-left: 223px;
-  margin-right: 278px;
 }
 .footer__top .language-dropdown .btn {
   margin: 0;
@@ -998,7 +998,6 @@ body {
   align-items: flex-start;
   justify-content: center;
   gap: 20px;
-  margin-right: 257px;
 }
 .sitemap__title,
 .adress__title {
@@ -1037,13 +1036,13 @@ body {
   align-items: flex-start;
   justify-content: center;
   gap: 6px;
+  min-width: 127px;
 }
 
 .footer__bot {
   width: 100%;
   display: flex;
   align-items: flex-end;
-  justify-content: center;
   justify-content: space-between;
 }
 .bot__2024 {
@@ -1054,6 +1053,15 @@ body {
   line-height: 140%;
   text-align: center;
   color: #fffef7;
+  white-space: nowrap;
+}
+.bot__box {
+  max-width: 980px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-left: 325px;
 }
 .bot__design {
   font-family: "Inter";
@@ -1095,53 +1103,32 @@ body {
 }
 @media (max-width: 1360px) {
   .nav__list {
-    padding-left: 20px;
+    padding-left: 30px;
   }
 }
 @media (max-width: 1280px) {
   .list__item:nth-child(6) {
-    margin-right: 60px;
+    margin-right: 83px;
   }
   .list__item:last-child {
   }
-}
-
-@media (max-width: 1220px) {
-  /*   .list__item {
-    margin-right: 30px;
-  }
-  .list__item:last-child {
-    margin: 0;
-  } */
-}
-@media (max-width: 1200px) {
   .header__logo {
     display: none;
   }
   .header__logo-adaptive {
     display: block;
-    min-width: 49px;
+    min-width: 47px;
   }
+}
+
+@media (max-width: 1220px) {
+}
+@media (max-width: 1200px) {
   .list__item:nth-child(6) {
     margin-right: 83px;
   }
 }
-@media (max-width: 1155px) {
-  /*   .list__item:nth-child(6) {
-    margin-right: 30px;
-  } */
-}
-@media (max-width: 1140px) {
-}
-@media (max-width: 1024px) {
-  .body__container {
-  }
-  .main-block:not(:first-child) {
-    margin-top: 80px;
-  }
-  .header {
-    max-width: 964px;
-  }
+@media (max-width: 1199px) {
   .header__body {
     margin-top: 25px;
   }
@@ -1218,8 +1205,6 @@ body {
     text-transform: uppercase;
     color: #fffef7;
   }
-  .bot__group {
-  }
 
   @keyframes burgerAnimation {
     from {
@@ -1229,6 +1214,31 @@ body {
       opacity: 1;
     }
   }
+  .footer__body {
+    padding: 40px 20px;
+  }
+  .footer__sitemap {
+  }
+  .footer__top .language-dropdown {
+  }
+  .footer__bot {
+    max-width: 100%;
+    justify-content: space-between;
+  }
+  .bot__txt {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .bot__2024 {
+    margin: 0;
+  }
+}
+@media (max-width: 1024px) {
+  .main-block:not(:first-child) {
+    margin-top: 80px;
+  }
+
   .page__main-block-1 {
   }
   .main__block-1 {
@@ -1358,20 +1368,24 @@ body {
     padding: 30px;
     gap: 30px;
   }
+  .footer__top {
+    max-width: 825px;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .top__box {
+    display: flex;
+    align-items: flex-start;
+  }
   .footer__sitemap {
-    margin-right: 240px;
-    margin-left: 206px;
   }
   .footer__bot {
     align-items: flex-start;
   }
-  .bot__txt {
-    width: 59px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
+  .bot__box {
+    max-width: 600px;
+    width: 100%;
+    margin-left: 307px;
   }
   .bot__2024 {
   }
@@ -1381,8 +1395,16 @@ body {
   .footer__bot .language-dropdown {
     display: block;
     position: inherit;
-    margin-left: 276px;
-    margin-right: 330px;
+  }
+}
+@media (max-width: 992px) {
+  .footer__body {
+    padding: 30px 20px;
+  }
+}
+@media (max-width: 885px) {
+  .bot__box {
+    margin: 0;
   }
 }
 @media (max-width: 830px) {
@@ -1436,6 +1458,16 @@ body {
   .card__about {
     max-width: 100%;
   }
+}
+@media (max-width: 576px) {
+  .footer__body {
+    padding: 30px 10px;
+  }
+  .footer__bot {
+    flex-direction: row-reverse;
+  }
+}
+@media (max-width: 500px) {
 }
 @media (max-width: 435px) {
   .header {
@@ -1705,12 +1737,7 @@ body {
     justify-content: center;
     gap: 20px;
   }
-  .bot__txt {
-    flex-direction: row;
-    align-items: center;
-    width: auto;
-    gap: 251px;
-  }
+
   .bot__2024 {
     white-space: nowrap;
   }
