--- a/Main/style.css
+++ b/Main/style.css
@@ -421,6 +421,7 @@ body {
   align-items: flex-start;
   justify-content: space-between;
   padding: 0;
+  gap: 32px;
 }
 .block-3__title {
   font-family: "Lubalin Graph";
@@ -435,14 +436,11 @@ body {
 .block-3__content {
   max-width: 1360px;
   width: 100%;
-  height: 745px;
+  padding-top: 52.5%;
   position: relative;
 }
-.volunteers {
+.content__circle {
   position: absolute;
-  top: 95px;
-  width: 480px;
-  height: 480px;
   border-radius: 100%;
   border: 1px solid #000;
   display: flex;
@@ -452,87 +450,53 @@ body {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: clamp(18px, 2vw, 24px);
   line-height: 100%;
   text-align: center;
   letter-spacing: -0.05em;
   text-transform: uppercase;
   color: #2e2e2e;
+  gap: 10px;
+}
+.volunteers {
+  max-width: 480px;
+  max-height: 480px;
+  width: 34vw;
+  height: 34vw;
+  left: 0;
+  top: 15%;
 }
 
 .participants {
-  width: 354px;
-  height: 354px;
-  border-radius: 100%;
-  border: 1px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
-  text-align: center;
-  letter-spacing: -0.05em;
-  text-transform: uppercase;
-  color: #2e2e2e;
-  position: absolute;
-  top: 32px;
-  left: 559px;
+  max-width: 354px;
+  max-height: 354px;
+  width: 26vw;
+  height: 26vw;
+  left: 40%;
+  top: 0;
 }
 .successful-projects-1 {
-  width: 280px;
-  height: 280px;
-  border-radius: 100%;
-  border: 1px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
-  text-align: center;
-  letter-spacing: -0.05em;
-  text-transform: uppercase;
-  color: #2e2e2e;
-  position: absolute;
-  top: 465px;
-  left: 507px;
+  max-width: 280px;
+  max-height: 280px;
+  width: 20vw;
+  height: 20vw;
+  left: 38%;
+  bottom: 0;
 }
 .successful-projects-2 {
-  width: 480px;
-  height: 480px;
-  border-radius: 100%;
-  border: 1px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 100%;
-  text-align: center;
-  letter-spacing: -0.05em;
-  text-transform: uppercase;
-  color: #2e2e2e;
-  position: absolute;
-  top: 265px;
-  left: 880px;
+  max-width: 480px;
+  max-height: 480px;
+  width: 34vw;
+  height: 34vw;
+  right: 0;
+  bottom: 0;
 }
 .blue__txt {
   font-family: "Lubalin Graph";
   font-style: normal;
   font-weight: 5;
-  font-size: 120px;
+  font-size: clamp(60px, 9vw, 120px);
   line-height: 100%;
-
   text-align: center;
   text-transform: uppercase;
   color: #4b61f1;
@@ -1307,23 +1271,38 @@ body {
     margin: 0;
   }
   .block-3__content {
-    height: 934px;
+    padding-top: 90.5%;
+  }
+  .content__circle {
+    font-size: clamp(18px, 3vw, 24px);
   }
   .volunteers {
-    top: 87px;
-    left: 45px;
+    width: clamp(200px, 47vw, 480px);
+    height: clamp(200px, 47vw, 480px);
+    top: 3.5%;
+    left: 5%;
   }
   .participants {
-    top: 44px;
-    left: 610px;
+    width: clamp(200px, 34.6vw, 354px);
+    height: clamp(200px, 34.6vw, 354px);
+    top: 0;
+    right: 0;
+    left: auto;
   }
   .successful-projects-1 {
-    top: 585px;
+    width: clamp(120px, 28.7vw, 280px);
+    height: clamp(120px, 28.7vw, 280px);
+    bottom: 6%;
     left: 0;
   }
   .successful-projects-2 {
-    top: 454px;
-    left: 469px;
+    width: clamp(200px, 47vw, 480px);
+    height: clamp(200px, 47vw, 480px);
+    bottom: 0;
+    right: 0;
+  }
+  .blue__txt {
+    font-size: clamp(60px, 12vw, 120px);
   }
   .page__block-video {
   }
@@ -1459,12 +1438,55 @@ body {
     max-width: 100%;
   }
 }
+@media (max-width: 633px) {
+  .block-3__title {
+  }
+}
 @media (max-width: 576px) {
   .footer__body {
     padding: 30px 10px;
   }
   .footer__bot {
     flex-direction: row-reverse;
+  }
+  .content__circle {
+    max-width: 100%;
+    width: 400px;
+    height: 250px;
+    position: inherit;
+    top: 0;
+    left: 0;
+    border-radius: 135px;
+    gap: 10px;
+    margin: 0 auto;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 100%;
+    text-align: center;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+    color: #2e2e2e;
+  }
+  .main__block-3 {
+    gap: 20px;
+  }
+  .block-3__content {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .blue__txt {
+    font-family: "Lubalin Graph";
+    font-style: normal;
+    font-weight: 5;
+    font-size: 100px;
+    line-height: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #4b61f1;
   }
 }
 @media (max-width: 500px) {
@@ -1605,19 +1627,6 @@ body {
     justify-content: center;
     gap: 10px;
     margin: 20px auto 0 auto;
-  }
-  .volunteers,
-  .participants,
-  .successful-projects-1,
-  .successful-projects-2 {
-    max-width: 100%;
-    width: 500px;
-    height: 250px;
-    position: inherit;
-    top: 0;
-    left: 0;
-    border-radius: 135px;
-    gap: 10px;
   }
   .blue__txt {
     font-family: "Lubalin Graph";
