--- a/Contact Us/style.css
+++ b/Contact Us/style.css
@@ -1,14 +1,14 @@
 .body__container {
-  align-items: center;
-  justify-content: center;
+}
+._container:not(:last-child) {
+  padding: 0 20px;
 }
 .contact__us {
-  max-width: 1360px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin: 80px 0 120px 0;
 }
 .contact__us-title {
   font-family: "Lubalin Graph";
@@ -29,10 +29,11 @@
   letter-spacing: -0.02em;
   color: #2e2e2e;
   margin: 20px 0 40px 0;
-  width: 670px;
+  max-width: 670px;
 }
 .contact__us-form {
-  max-width: 100%;
+  max-width: 1360px;
+  width: 100%;
   background: rgba(255, 238, 88, 1);
   border-radius: 30px;
   border: 1px solid #000;
@@ -55,6 +56,7 @@
   margin-bottom: 75px;
 }
 .form__inputs-top {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,7 +65,7 @@
 }
 .name__input,
 .email__input {
-  width: 630px;
+  width: 100%;
   background-color: transparent;
   border-bottom: 1px solid #000;
   font-family: "Inter";
@@ -88,7 +90,7 @@
   opacity: 0.6;
 }
 .mid__input {
-  width: 1280px;
+  width: 100%;
   background-color: transparent;
   border-bottom: 1px solid #000;
   font-family: "Inter";
@@ -101,7 +103,7 @@
   opacity: 1;
 }
 .form__bot {
-  width: 1280px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -176,10 +178,17 @@
   background-color: #000;
   border-color: #000;
 }
+.block__volunteers {
+  margin-top: 120px;
+}
+@media (max-width: 1094px) {
+  .form__title {
+    font-size: 65px;
+  }
+}
 @media (max-width: 1024px) {
   .contact__us {
-    max-width: 964px;
-    margin: 60px 0 80px 0;
+    margin-top: 60px;
   }
   .form__title {
     font-family: "Lubalin Graph";
@@ -187,19 +196,17 @@
     font-weight: 5;
     font-size: 60px;
     line-height: 100%;
-    text-align: center;
+    text-align: left;
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #2e2e2e;
   }
   .mid__input {
-    width: 884px;
   }
   .name__input {
-    width: 268px;
+    max-width: 268px;
   }
   .email__input {
-    width: 596px;
   }
   .form__bot {
     flex-direction: column;
@@ -212,11 +219,36 @@
   .form__title {
     margin-bottom: 85px;
   }
+  .block__volunteers {
+    margin-top: 80px;
+  }
 }
-@media (max-width: 375px) {
+@media (max-width: 705px) {
+  .contact__us-title {
+    font-size: 90px;
+  }
+}
+@media (max-width: 538px) {
+  .contact__us-title {
+    font-size: 75px;
+  }
+}
+@media (max-width: 493px) {
+  .form__title {
+    font-size: 45px;
+  }
+}
+@media (max-width: 455px) {
+  .contact__us-title {
+    font-size: 67.5px;
+  }
+}
+@media (max-width: 568px) {
+  ._container:not(:last-child) {
+    padding: 0 10px;
+  }
   .contact__us {
-    max-width: 355px;
-    margin: 40px 0 60px 0;
+    margin-top: 40px;
   }
   .contact__us-title {
     font-family: "Lubalin Graph";
@@ -229,7 +261,6 @@
     color: #2e2e2e;
   }
   .contact__us-p {
-    width: 100%;
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
@@ -242,6 +273,7 @@
   .contact__us-form {
     padding: 20px;
   }
+
   .form__title {
     font-family: "Lubalin Graph";
     font-style: normal;
@@ -256,14 +288,17 @@
   }
   .form__inputs-top {
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
     gap: 20px;
     margin-bottom: 20px;
   }
   .form__inputs-top input {
-    width: 100%;
+    max-width: 100%;
   }
   .form__bot {
     margin: 0;
+  }
+  .block__volunteers {
+    margin-top: 60px;
   }
 }
