--- a/Project Example/style.css
+++ b/Project Example/style.css
@@ -133,8 +133,9 @@
     gap: 10px;
   }
 }
-@media (max-width: 425px) {
+@media (max-width: 435px) {
   .main__about-projects {
+    padding: 0 10px;
     margin-top: 40px;
   }
   .about-projects__title {
