--- a/Reviews/style.css
+++ b/Reviews/style.css
@@ -1,10 +1,10 @@
 .reviews {
-  max-width: 1360px;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin: 80px 0 120px 0;
+  padding: 0 20px;
 }
 .reviews__title {
   font-family: "Lubalin Graph";
@@ -29,9 +29,13 @@
 }
 .reviews__cards {
   max-width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
+}
+.card__about {
+  max-width: 630px;
+  width: 100%;
 }
 .reviews__but {
   margin: 0 auto;
@@ -59,8 +63,6 @@
 }
 @media (max-width: 1024px) {
   .reviews {
-    max-width: 964px;
-    margin: 60px 0 80px 0;
   }
   .reviews__p {
     margin: 30px 0;
@@ -85,6 +87,12 @@
   }
   .reviews__but {
     margin-top: 30px;
+  }
+  .reviews__cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
 }
 @media (max-width: 375px) {
